public/css/style.css
/* ... */
.modal-header {
  padding: 2px 2px;
  background-color: white;
  color: black;
}

.modal-body {padding: 2px 16px;}

.modal-footer {
  padding: 2px 16px;
  background-color: white;
  color: white;
}

.nav-right-container {
  display: flex;
  /* background-color: red; */
  align-items: center;
}

.welcome-container {
  margin-right: 15px;
}

.logout-btn {
  width: 90px;
  height: 30px;
  background-color: #D7E7F5;
  color: #3D79C9;
}

/* Main Grid Styles */
.grid__container {
  font-size: 14px;
  color: black;
  height: 800px;
  margin-top: 8px;
  display: grid;
  grid-template-columns: 1fr 4fr 3fr;
  /* grid-template-rows: ; */
  grid-template-areas:
   "left-col mid-col right-col";
}


/* LEFT COLUMN ================================================================== */

.grid__left-col {
  min-width: 270px;
  grid-area: left-col;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 0.5fr 3fr 1fr;
  min-width: 200px;
  /* max-width: 300px; */
}

.logo-container {
  margin-left: 20px;
}
.logo-dftm {
  width: 200px;
  height: auto;
}
/* .left-col__all-tasks {
} */

/* .list-all-tasks-container {
  background-color: seagreen;
} */

.left-col__list-categories  {
  padding: 0 15px;
  font-size: 13px;
  /* border-top: 3px solid #CCCCCC; */
  /* margin: 0 1%; */
}

.list-cat-container {
  margin-bottom: 8px;
}

.left-col__cow-container {
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
}
/* MID COLUMN ================================================================== */

.grid__mid-col {
  min-width: 400px;
  grid-area: mid-col;
  border-radius: 7px;
  background-color: white;
  box-shadow: 1px -2px 5px rgba(0, 0, 0, 0.2);
  display: grid;
  /* grid-template-columns: 75px 80px 1fr 1fr; */
  grid-template-columns: 75px 75px 80px 1fr 1fr;
  grid-template-rows: 1fr 0.7fr 1.5fr 13fr;
  grid-template-areas:
    "list-header list-header list-header . ."
    "task-total overdue-total completed-total divider tab-container"
    "add-task-form add-task-form add-task-form add-task-form add-task-form"
    "task-list task-list task-list task-list task-list";
}

.mid-col-list-header {
  grid-area: list-header;
  padding: 20px 0 0 20px;
}

.mid-col-list-header h2{
  margin: 0;
}

form.add-task-form{
  grid-area: add-task-form;
  border-top: 1px dotted rgba(140, 148, 157, .5);
  border-bottom: 1px dotted rgba(140, 148, 157, .5);
  margin: 0;
  padding: 10px 20px 10px 20px;
}

.add-task-input {
  width: 100%;
  height: 35px;
  border: 1px solid rgba(140, 148, 157, .5);
  border-radius: 3px;
  margin: 0;
  padding: 0 8px;
}

.add-task-btn {
  /* display: none; */
  float:right;
}

.add-task-input::placeholder {
  color: #676767;
  opacity: 0.8;
}

.add-task-input:-ms-input-placeholder {
 color: #676767;
}

.add-task-input::-ms-input-placeholder {
 color: #676767;
}

.task-total {
  grid-area: task-total;
  background-color: #DBE8F6;
  width: 60px;
  font-size: 13px;
  border-radius: 5px;
  text-align: center;
  padding: 11px 0;
  line-height: 16px;
  margin-left: 20px;
  margin-bottom: 5px;
}

.total-task-span {
  font-weight: bold;
  font-size: 19px;
  color: #2060BF;
  /* display: block; */
  /* line-height: 19px; */
}

.completed-total {
  grid-area: completed-total;
  font-size: 13px;
  background-color: #DBE8F6;
  color: #8C949D;
  width: 75px;
  border-radius: 5px;
  text-align: center;
  padding: 11px 0;
  line-height: 16px;
  margin-left: 0px;
  margin-bottom: 5px;
}

.completed-tasks-span {
  font-weight: bold;
  font-size: 19px;
  color: #8C949D;
}

.overdue-total {
  grid-area: overdue-total;
  background-color: #DBE8F6;
  width: 60px;
  font-size: 13px;
  border-radius: 5px;
  text-align: center;
  padding: 11px 0;
  line-height: 16px;
  margin-left: 10px;
  margin-bottom: 5px;
}

.overdue-tasks-span {
  font-weight: bold;
  font-size: 19px;
  color: #B22222;
}

.divider {
  grid-area: divider;
  /* background-color: wheat; */
}

.tab-container {
  grid-area: tab-container;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  padding-right: 10px;
  /* background-color: burlywood; */
}

.task-tab {
  width: 100px;
  height: 27px;
  background-color: white;
  font-size: 13px;
  padding: 5px;
  margin-left: 3px;
  position: relative;
  top:1px;
  border: 1px dotted rgba(140, 148, 157, .5);
  border-radius: 2px;
  border-bottom: none;
  /* background-color: lawngreen; */
}

.task-list-container {
  grid-area: task-list;
}

.task-container {
  display: flex;
  justify-content: space-between;
  font-size: 14px;
  height: 35px;
  padding: 3px 20px 3px 15px;
  border-bottom: 1px dotted rgba(140, 148, 157, .5);
}

.buttons-container {
  display: flex;
  justify-content: space-around;
  padding: 4px 0;
}

.delete-button-container {
  display: flex;
  padding-right: 5px;
  justify-content: center;
  border-right: 3px solid #CCCCCC;
}

.update-button-container {
  display: flex;
  justify-content: center;
  margin-left: 5px;
}

.delete-task-btn {
  color: white;
  padding: 0 8px 2px 8px;
  font-size: 10px;
  font-weight: normal;
  transition: 0.3s;
}

.update-task-btn{
  color: white;
  padding: 0 8px 2px 8px;
  font-size: 10px;
  font-weight: normal;
  transition: 0.3s;
  color:white
}

.delete-task-btn:hover {
  background-color: #42a2f7;
  /* color: white; */
}

.update-task-btn:hover{
  background-color: #42a2f7;
  /* color: white; */
}

.task {
  border-left: 3px solid #CCCCCC;
  line-height: 28px;
  padding-left: 10px;
  height: 100%;
}

/* RIGHT COLUMN ================================================================= */

.grid__right-col {
  font-size: 14px;
  grid-area: right-col;
  background-color: #E4EEF8;
  box-shadow: 1px -2px 5px rgba(0, 0, 0, 0.2);
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 4fr;
  grid-template-areas:
    "task-info"
    "task-options";
}

.right-col__task-info {
  grid-area: task-info;
  padding: 20px;
}
/* ... */

